[gd_scene load_steps=16 format=2]

[ext_resource path="res://Actors/TourPod/TourPod.gd" type="Script" id=1]
[ext_resource path="res://Worlds/MoonTown/Assets/Ground_Passenger_Pod/Ground_Passenger_Pod.tscn" type="PackedScene" id=2]
[ext_resource path="res://LegacyPlayer/avatar_v2/PlayerCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/TourPod/TourPodInteractive.gd" type="Script" id=4]
[ext_resource path="res://Themes/Fonts/Exo2/Exo2-Medium.ttf" type="DynamicFontData" id=5]

[sub_resource type="Animation" id=1]
resource_name = "SmoothIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "SmoothOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Ground_Passenger_Pod/PassengerPod_Hatch:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 120, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Ground_Passenger_Pod/PassengerPod_Hatch:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 120, 0, 0 ) ]
}

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.235053, 0.156291, 1.32867 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.166063, 0.132887, 0.144415 )

[sub_resource type="PlaneMesh" id=10]
size = Vector2( 20, 15 )

[sub_resource type="ViewportTexture" id=11]
viewport_path = NodePath("MainBody/TourPodArea/CollisionShape/MeshInstance/Viewport")

[sub_resource type="SpatialMaterial" id=12]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_texture = SubResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 65
outline_size = 1
font_data = ExtResource( 5 )

[node name="TourPod" type="Spatial"]
script = ExtResource( 1 )

[node name="CameraTransition" type="AnimationPlayer" parent="."]
anims/SmoothIn = SubResource( 1 )
anims/SmoothOut = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]

[node name="MainBody" type="Area" parent="."]

[node name="PlayerCamera" parent="MainBody" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
kinematic_body_path = NodePath("../Ground_Passenger_Pod")
kinematic_body_camera = NodePath("../../Camera")
default_zoom_distance = 2.0
max_zoom_distance = 5.0
min_zoom_distance = 0.5

[node name="RayCast" parent="MainBody/PlayerCamera" index="0"]
collision_mask = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainBody"]
anims/CloseDoor = SubResource( 4 )
anims/OpenDoor = SubResource( 5 )

[node name="PassengerCheck" type="CollisionShape" parent="MainBody"]
shape = SubResource( 8 )
disabled = true

[node name="Ground_Passenger_Pod" parent="MainBody" instance=ExtResource( 2 )]

[node name="PassengerPod_Hatch" parent="MainBody/Ground_Passenger_Pod" index="1"]
transform = Transform( 1, 0, 0, 0, -0.5, -0.866025, 0, 0.866025, -0.5, 0.00181354, 0.0798098, 1.34078 )

[node name="PassengerPod_Hatch" parent="MainBody/Ground_Passenger_Pod/PassengerPod_Hatch" index="0"]
collision_layer = 2
collision_mask = 8

[node name="shape0" parent="MainBody/Ground_Passenger_Pod/PassengerPod_Hatch/PassengerPod_Hatch" index="0"]
disabled = false

[node name="groundPassengerPod" parent="MainBody/Ground_Passenger_Pod" index="2"]
collision_layer = 2
collision_mask = 8

[node name="shape0" parent="MainBody/Ground_Passenger_Pod/groundPassengerPod" index="0"]
disabled = false

[node name="TourPodArea" type="Area" parent="MainBody"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="MainBody/TourPodArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.02423 )
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="MainBody/TourPodArea/CollisionShape"]
transform = Transform( 0.01, 0, 0, 0, -1.62921e-09, -0.01, 0, 0.01, -1.62921e-09, 0, 0, 0 )
mesh = SubResource( 10 )
material/0 = SubResource( 12 )

[node name="Viewport" type="Viewport" parent="MainBody/TourPodArea/CollisionShape/MeshInstance"]
size = Vector2( 512, 256 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="MainBody/TourPodArea/CollisionShape/MeshInstance/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Waiting
for rover..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="activate_signal" from="MainBody/TourPodArea" to="." method="activate"]

[editable path="MainBody/PlayerCamera"]

[editable path="MainBody/Ground_Passenger_Pod"]
